--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ pytest  = { version = "^6.2.4"}
 pytest-cov  = { version = "^3.0.0"}
 pytest-asyncio = "^0.16.0"
 pre-commit = {version = "^2.16.0"}
-async-asgi-testclient = "^1.4.9"
+async-asgi-testclient = { git = "https://github.com/LucidDan/async-asgi-testclient.git", branch = "master" }
 #mkdocs  = { version = "^1.1.2"}
 #mkdocs-include-markdown-plugin  = { version = "^3.2.3"}
 #mkdocs-material  = { version = "^8.1.3"}
